fix(cascader): add ul padding to prevent focus ring from being clipped by scrollbar viewport
- move ul inline styles (list-style, margin) to SCSS
- add padding: 3px to give box-shadow room within OverlayScrollbars viewport overflow

--- a/packages/core/src/cascader/_cascader-styles.scss
+++ b/packages/core/src/cascader/_cascader-styles.scss
@@ -69,6 +69,12 @@
   & + & {
     border-inline-start: 1px solid palette.semantic-variable(separator, neutral-faint);
   }
+
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 3px;
+  }
 }
 
 .#{$item-prefix} {
